tests/ui/traits/next-solver/overflow/recursive-self-normalization-2.stderr
error[E0277]: the trait bound `<T as Foo2>::Assoc2: Bar` is not satisfied
  --> $DIR/recursive-self-normalization-2.rs:15:17
   |
LL |     needs_bar::<T::Assoc1>();
   |                 ^^^^^^^^^ the trait `Bar` is not implemented for `<T as Foo2>::Assoc2`
   |
note: required by a bound in `needs_bar`
  --> $DIR/recursive-self-normalization-2.rs:12:17
   |
LL | fn needs_bar<S: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`
help: consider further restricting the associated type
   |
LL | fn test<T: Foo1<Assoc1 = <T as Foo2>::Assoc2> + Foo2<Assoc2 = <T as Foo1>::Assoc1>>() where <T as Foo2>::Assoc2: Bar {
   |                                                                                       ++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
